--- a/bc-web-app/index.html
+++ b/bc-web-app/index.html
@@ -7,4 +7,8 @@
     <title>Bittle Control App</title>
   </head>
   <body>
-x
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+    <script>const global = globalThis;</script>
+  </body>
+</html>
